# hello_vulkan

./: .gitignore  CMakeLists.txt  README.md  compile_shaders.bat
shaders/: compile.bat
src/: main.cpp
src/shaders/: shader.vert
src/utils/: io.cpp  io.h  vk_debug.cpp  vk_debug.h
